# research

./: .gitignore  CLAUDE.md  GIT_GUIDELINES.md  README.md  RESEARCH_GUIDELINES.md  chat_messages.md  pyproject.toml
agents/: README.md  deep-research.md
book-recommendations/: README.md  RECOMMENDATION_SYSTEM.md  chat_messages.md  pyproject.toml  user_profile.md
book-recommendations/goodreads/: __init__.py  cli.py
book-recommendations/recommend/: README.md  cli.py
